# switchboard-plug-services

./: README.md  meson.build
data/: io.elementary.switchboard.services.helper  io.elementary.switchboard.services.policy  io.elementary.switchboard.services.policy.in  io.elementary.switchboard.services.policy.in.in  meson.build
debian/: changelog  control  copyright  rules
po/: meson.build  ru.po  services-plug.pot
src/: Plug.vala  Utils.vala
src/Widgets/: FilterBox.vala  HelpBox.vala  MainView.vala  ServiceStatus.vala  ServicesView.vala  WaitingView.vala
